[Post] 일부 문구 번역 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -9,7 +9,7 @@ toc_sticky: true
 toc_label: 목차
 icon: "fas fa-link"
 tag: "Xcode"
-published : true
+published : false
 depth:
   - title: "iOS"
     url: /ios/
@@ -18,7 +18,7 @@ depth:
     url: /ios/xcode/
     icon: "far fa-folder-open"
 ---
-구글 번역기로 돌린 발번역입니다. 자세한 내용은 하단 링크의 원문을 참고해주세요.
+제가 보려고👀 구글 번역기로 돌린 발번역입니다. 자세한 내용은 하단 링크의 원문을 확인해주세요.
 
 # Xcode 13
 Xcode 13에는 Swift 5.5와 iOS 15, iPadOS 15, macOS Monterey, tvOS 15, watchOS 8용 SDK가 포함되어 있습니다.
@@ -66,9 +66,9 @@ Xcode 13에는 iOS 15, iPadOS 15, tvOS 15, watchOS 8 및 macOS Big Sur 11.3용 S
 ### New Features
 * Xcode 13에는 [<i class="fas fa-link"></i> Swift 를 사용한 동시성 프로그래밍](https://docs.swift.org/swift-book/LanguageGuide/Concurrency.html){:target="_blank"}에 대한 기본 지원, [<i class="fas fa-link"></i> Xcode Cloud](https://developer.apple.com/xcode-cloud/){:target="_blank"}와의 지속적인 통합 및 전달 지원, Git pull 요청에 대한 통합 지원, DocC를 사용하여 Swift 프레임워크에서 문서를 생성하고 볼 수 있는 기능, Vim 키 바인딩 지원, Swift 패키지 컬렉션 등을 지원합니다.(78887232)
 
-* 이제 cktool command line에서 cktool을 사용하여 [<i class="fas fa-link"></i> CloudKit](https://developer.apple.com/documentation/cloudkit){:target="_blank"} database schema 및 records 와 상호 작용할 수 있습니다. 사용 가능한 명령 목록을 보려면 man cktool 또는 xcrun cktool --help를 실행하십시오.(68114031)
+* 이제 cktool command line에서 cktool을 사용하여 [<i class="fas fa-link"></i> CloudKit](https://developer.apple.com/documentation/cloudkit){:target="_blank"} database schema 및 records 와 상호 작용할 수 있습니다. 사용 가능한 명령 목록을 보려면 `run man cktool ` 또는 `xcrun cktool --help`를 실행하십시오.(68114031)
 
-* 이제 command line에서 TextureConverter 사용 하여 textures를 모든 Metal compressed texture formats으로 압축할 수 있습니다. 사용 가능한 명령 목록을 보려면 TextureConverter --help.를 실행하십시오. (70481436)
+* 이제 command line에서 TextureConverter 사용 하여 textures를 모든 Metal compressed texture formats으로 압축할 수 있습니다. 사용 가능한 명령 목록을 보려면 `TextureConverter --help`를 실행하십시오. (70481436)
 
 * Xcode 13의 XIP archive는 이제 동일한 콘텐츠에 대해 약 15% 더 작아졌습니다. archive Utility를 사용하거나 xip command line 에서 archive를 expand 할 수 있습니다. Note: archive를 expanding하는 다른 방법으로 인해 Xcode 앱이 손상될 수 있습니다. (78714333)
 
@@ -77,61 +77,68 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Apple Clang Compiler
 ### New Features
-* new Swift concurrency model을 지원하기 위해 clang이제 completion handler를 두 번 이상 호출하거나 실행 경로에 완료 핸들러 호출이 없는 경우 경고할 수 있습니다. new Warnings를 켜려면 Apple Clang - Warnings - All languages section의 project’s Build Settings에서 Completion Handler Misuse pop-up menu에서 Yes를 선택합니다. 또는 clang command line에서 호출할 때 -Wcompletion-handler flag를 전달합니다. 메서드에 NS_SWIFT_DISABLE_ASYNC 속성을 추가하여 메서드에 대한 경고를 표시하지 않을 수 있으며, 이것은 또한 이 메서드를 Swift에서 async 메서드로 변환하는 것을 억제합니다. (10708075)
+* new Swift concurrency model을 지원하기 위해 clang이제 completion handler를 두 번 이상 호출하거나 실행 경로에 완료 핸들러 호출이 없는 경우 경고할 수 있습니다. new Warnings를 켜려면 Apple Clang - Warnings - All languages section의 project’s Build Settings에서 Completion Handler Misuse pop-up menu를 Yes를 선택합니다. 또는 clang command line에서 호출할 때 `-Wcompletion-handler flag`를 전달합니다. 메서드에 `NS_SWIFT_DISABLE_ASYNC` 속성을 추가하여 메서드에 대한 경고를 표시하지 않을 수 있으며, 이것은 또한 이 메서드를 Swift에서 async 메서드로 변환하는 것을 억제합니다. (10708075)
 
-* The new -fobjc-constant-literals flag 사용하면 전역 상수 literals을 선언하고, Objective-C 코드에서 지원하는 다른 literals에 대한 optimizations를 수행할 수 있습니다. 이 flag를 사용 하여 compile time에 embed static property list literals(NSDictionary, NSNumber, and NSArray)를, binaries의 CONST 섹션에 배치합니다. (44920795, 45380392)<br/><br/>
-For example:
-```swift
-static NSString * const MyNotificationName = @"MyNotification";
-```
-And:
-```swift
-static NSDictionary * const myConstantDictionary = @{ @"something_awesome" : @YES };
-static NSArray * const myArray = @[ @1, @2, @3, @4 ];
-static NSNumber * const answerToLife = @42
-```
-가능한 경우 compiler는 위의 예와 유사하지만 non-global scope에 있는 명령문도 변환합니다.<br/><br/>
-컴파일러는 macOS 11, iOS 및 iPadOS 14, tvOS 14, watchOS 7 이상의 배포 대상에서 이 플래그를 지원합니다. 플래그는 기본적으로 활성화되어 있습니다. 상수 리터럴을 완전히 비활성화하려면 -fno-objc-constant-literals를 사용합니다. 특정 상수 리터럴 최적화를 선택적으로 비활성화하려면 -fno-constant-nsnumber-literals, -fno-constant-nsarray-literals 및 -fno-constant-nsdictionary-literals를 사용합니다.<br/><br/>
-The plutil tool, available in macOS 11 and later, can generate source files with constant section objective-c literals. For example, you can generate .m files using the following command:
-plutil tool은 macOS 11 이상에서 사용할 수 있으며, constant section cbjective-c literals을 사용하여 소스 파일을 생성할 수 있습니다. 예를 들어 다음 명령을 사용하여 .m 파일을 생성할 수 있습니다 .
-```
-plutil -convert objc SomePlist.plist
-```
-따르는 .h헤더 파일 을 생성하려면 -header 다음 명령과 같이 선택적 플래그를 추가합니다.
-```
-plutil -convert objc -header SomePlist.plist
-```
-Note: In constant dictionaries는 NSString키로 만 사용할 수 있습니다. 다른 유형을 사용하면 오류가 발생합니다.
-```swift
-static NSDictionary * const myConstantDictionary = @{ @42 : @@"answer to life" }; // This throws an error, the initializer element isn't a compile-time constant.
-```
+* The new `-fobjc-constant-literals flag` 사용하면 전역 상수 literals을 선언하고, Objective-C 코드에서 지원하는 다른 literals에 대한 optimizations를 수행할 수 있습니다. 이 flag를 사용 하여 compile time에 embed static property list literals(NSDictionary, NSNumber, and NSArray)를, binaries의 CONST 섹션에 배치합니다. (44920795, 45380392)<br/><br/>
+  For example:
+  ```swift
+  static NSString * const MyNotificationName = @"MyNotification";
+  ```
+  And:
+  ```swift
+  static NSDictionary * const myConstantDictionary = @{ @"something_awesome" : @YES };
+  static NSArray * const myArray = @[ @1, @2, @3, @4 ];
+  static NSNumber * const answerToLife = @42
+  ```
+  <br/>
+  가능한 경우 compiler는 위의 예와 유사하지만 non-global scope에 있는 명령문도 변환합니다.<br/>
+  <br/>
+  컴파일러는 macOS 11, iOS 및 iPadOS 14, tvOS 14, watchOS 7 이상의 배포 대상에서 이 플래그를 지원합니다. 플래그는 기본적으로 활성화되어 있습니다. 상수 리터럴을 완전히 비활성화하려면 `-fno-objc-constant-literals`를 사용합니다. 특정 상수 리터럴 최적화를 선택적으로 비활성화하려면 `-fno-constant-nsnumber-literals, -fno-constant-nsarray-literals` 및 `-fno-constant-nsdictionary-literals`를 사용합니다.<br/>
+  <br/>
+  plutil tool은 macOS 11 이상에서 사용할 수 있으며, constant section cbjective-c literals을 사용하여 소스 파일을 생성할 수 있습니다. 예를 들어 다음 명령을 사용하여 .m 파일을 생성할 수 있습니다.
+  ```
+  plutil -convert objc SomePlist.plist
+  ```
+  <br/>
+  .m 파일을 따르는 .h헤더 파일 을 생성하려면 -header 다음 명령과 같이 선택적 플래그를 추가합니다.
+  ```
+  plutil -convert objc -header SomePlist.plist
+  ```
+  <br/>
+  Note: In constant dictionaries는 NSString키로 만 사용할 수 있습니다. 다른 유형을 사용하면 오류가 발생합니다.
+  ```swift
+  // This throws an error, the initializer element isn't a compile-time constant.
+  static NSDictionary * const myConstantDictionary = @{ @42 : @@"answer to life" }; 
+  ```
 * 이제 Xcode의 빌드 설정에서 C++20및 GNU++20C++ language dialects를 구성할 수 있습니다. (50900425)
 
-* clang은 이제 C++20 가능성 속성 [[가능성이 있음]] 및 [[가능성이 낮음]]을 지원합니다.
+* clang은 이제 C++20 likelihood attributes 인 [[likely]], [[unlikely]]을 지원합니다.
 
 ### Known Issues
-ASAN으로 인해 x86_64에서 Swift async functions가 crash가 발생할 수 있습니다. (80786596)
+* ASAN으로 인해 x86_64에서 Swift async functions가 crash가 발생할 수 있습니다. (80786596)
 
 ## Asset Catalogs
 ### New Features
-* runtime 시 앱은 이제 자산 카탈로그의 iOS 앱 아이콘 자산을 대체 앱 아이콘으로 사용할 수 있습니다. new build 에서 "Include all app icon assets,"은 Xcode가 빌드된 제품에 모든 앱 아이콘 세트를 포함하는지 여부를 제어합니다. 설정이 비활성화된 경우, Xcode에는 새 설정인 "Alternate app icon sets."에 지정된 아이콘과 함께 기본 앱 아이콘이 포함됩니다. asset catalog compiler는 빌드된 제품의 Info.plist에 적절한 콘텐츠를 삽입합니다. (33600923)
+* runtime 시 앱은 이제 자산 카탈로그의 iOS 앱 아이콘 자산을 대체 앱 아이콘으로 사용할 수 있습니다. new build 에서 "`Include all app icon assets,`"는 Xcode가 빌드된 제품에 모든 앱 아이콘 세트를 포함하는지 여부를 제어합니다. 설정이 비활성화된 경우, Xcode에는 새 설정인 "`Alternate app icon sets.`"에 지정된 아이콘과 함께 기본 앱 아이콘이 포함됩니다. asset catalog compiler는 빌드된 제품의 Info.plist에 적절한 콘텐츠를 삽입합니다. (33600923)
 
 * asset catalog를 통해 watchOS를 포함한 모든 플랫폼에서 사용할 수 있는 universal system colors를 선택할 수 있습니다.(73257675)
 
 ## Build System
 ### New Features
-* Configuration settings(.xcconfig) 파일은 이제 \여러 줄에 걸쳐 긴 목록을 나누는 데 \ 사용 을 지원 합니다.  (4405473) (FB5943765)<br/><br/>
+* Configuration settings(.xcconfig) 파일은 이제 \여러 줄에 걸쳐 긴 목록을 나누는 데 `\` 사용 을 지원 합니다.  (4405473) (FB5943765)<br/>
+  <br/>
   For example:
   ```
   HEADER_SEARCH_PATHS = $(SRCROOT)/include \
       $(SRCROOT)/include/component1 \
       $(SRCROOT)/include/component2
   ```
-* When you pass xcconfig files to xcodebuild using the -xcconfig command-line flag and XCODE_XCCONFIG_FILE environment variable, Xcode parses them using New Build System semantics, which also supports condition parameters. (25001734)
+*
+* -xcconfig command-line와 `XCODE_XCCONFIG_FILE` 환경 변수를 사용하여 xcconfig 파일을 xcodebuild에 전달할 때, Xcode는 조건 매개변수도 지원하는 New Build System semantics을 사용하여 구문 분석합니다. (25001734)
 
-* Configure frameworks to build for multiple platforms in a single build operation by setting the SUPPORTED_PLATFORMS build setting to the list of platforms you support and setting ALLOW_TARGET_PLATFORM_SPECIALIZATION to YES. (45951215)
+* `SUPPORTED_PLATFORMS` 빌드 설정을 지원하는 platforms 목록으로 설정 하려면, `ALLOW_TARGET_PLATFORM_SPECIALIZATION`을 YES로 설정하여 단일 빌드 작업에서 multiple platforms에 대해로 빌드하도록 프레임워크를 구성합니다. (45951215)
 
-* You can now use platform filters in build phases and target dependencies for all supported platforms. (72240935)
+* 이제 지원되는 모든 플랫폼에 대한 빌드 단계 및 대상 종속성에서 플랫폼 필터를 사용할 수 있습니다. (72240935)
 
 * xcodebuild now shows the target and project name for each failing command in the summary at the end of the build log when a build failure occurs. (75081458)
 
