[Post] Xcode 13 CoreML 번역 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -18,7 +18,7 @@ depth:
     url: /ios/xcode/
     icon: "far fa-folder-open"
 ---
-제가 보려고👀 구글 번역기로 돌린 발번역입니다. 자세한 내용은 하단 링크의 원문을 확인해주세요.
+저만 보려고👀 구글 번역기로 돌린 발번역입니다.
 
 # Xcode 13
 Xcode 13에는 Swift 5.5와 iOS 15, iPadOS 15, macOS Monterey, tvOS 15, watchOS 8용 SDK가 포함되어 있습니다.
@@ -84,6 +84,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
   ```swift
   static NSString * const MyNotificationName = @"MyNotification";
   ```
+  <br/>
   And:
   ```swift
   static NSDictionary * const myConstantDictionary = @{ @"something_awesome" : @YES };
@@ -140,46 +141,46 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 * 이제 지원되는 모든 플랫폼에 대한 빌드 단계 및 대상 종속성에서 플랫폼 필터를 사용할 수 있습니다. (72240935)
 
-* xcodebuild now shows the target and project name for each failing command in the summary at the end of the build log when a build failure occurs. (75081458)
+* xcodebuild는 이제 빌드 실패가 발생할 때 빌드 로그 끝에 있는 요약에 실패한 각 명령의 대상 및 프로젝트 이름을 표시합니다. (75081458)
 
-* The build system now emits a warning when a script phase, or custom build rule, declares an input dependency that isn’t part of the build input and isn’t declared as an output dependency of any other task in the build. (76129954)
+* 이제 build system은 script phase, 또는 custom build rule이 빌드 입력에 속하지 않고, 빌드의 다른 작업의 output dependency로 선언되지 않은 input dependency를 선언하면 경고를 내보냅니다. (76129954)
 
-* The build options sheet now includes a Dependency Order option, which replaces the Parallelize Build option, and a Manual Order option, which is deprecated, but included for legacy compatibility. (76251439)
+*  build options sheet에 `Parallelize Build option`을 대체하는 `Dependency Order option`과 deprecated 되었으나 레거시 호환성을 위해 포함된 `Manual Order option`이 포함되어 있습니다. (76251439)
 
 ### Resolved Issues
-* Fixed an issue that set the NATIVE_ARCH build setting to armv7 when building against the iOS and iPadOS, tvOS, and watchOS SDKs. The NATIVE_ARCH build setting now reflects the architecture family of the host Mac — arm64 on Macs with Apple silicon or x86_64 on Intel-based Macs. (5716560)
+* iOS 및 iPadOS, tvOS 및 watchOS SDK에 대해 빌드할 때 `NATIVE_ARCH` 빌드 설정을 armv7로 설정하는 문제를 수정했습니다. `NATIVE_ARCH` 빌드 설정은 이제 호스트 Mac의 아키텍처 제품군(Apple 실리콘이 있는 Mac의 arm64 또는 Intel 기반 Mac의 x86_64)을 반영합니다. (5716560)
 
-* Importing XCTest or StoreKitTest in a framework target when building for iOS, tvOS, or watchOS no longer fails with a linker error. (61952138)
+* iOS, tvOS 또는 watchOS용으로 빌드할 때 framework target 에서 XCTest 또는 StoreKitTest 가져오기 시 linker error 발생 오류가 발생하지 않습니다. (61952138)
 
-* Fixed a dependency ordering issue involving frameworks with public and private module maps which could result in “redefinition of module” errors. (72123120)
+* "redefinition of module" 오류가 발생할 수 있는 public and private module maps이 있는 frameworks와 관련된 dependency ordering issue를 수정했습니다. (72123120)
 
-* Fixed an issue where clicking on a warning or error in the issue navigator didn’t navigate to the associated C or C++ file. (73582669) (FB8981116)
+* issue navigator 에서 warning 또는 error를 클릭해도 연결된 C 또는 C++ 파일로 이동하지 않는 문제가 수정되었습니다. (73582669) (FB8981116)
 
-* Fixed an issue that required closing and re-opening the workspace if the build system service crashed. The workspace now lets you attempt building again. (74124183)
+* build system service crashed가 발생된 경우 workspace를 닫았다가 다시 열어야 하는 문제가 수정되었습니다. 이제 workspace에서 다시 빌드를 시도할 수 있습니다. (74124183)
 
 ### Deprecations
-* The legacy build system is deprecated and now produces an error when you attempt to use it. (76124672)
+* legacy build system은 deprecated 되었으며 사용하려고 하면 오류가 발생합니다. (76124672)
 
 ## Core Data
 ### New Features
-* Use the Allows Cloud Encryption checkbox in the Core Data model editor’s attribute inspector to support the CloudKit Encrypted Record Fields feature. (73670355)
+* Core Data model editor’s의 attribute inspector에 있는 Allows Cloud Encryption의 checkbox를 사용하여 CloudKit Encrypted Record Fields 기능을 지원합니다. (73670355)
 
 ## Core ML
 ### New Features
-* Xcode’s Core ML model editor now supports the new Core ML package format, .mlpackage, along with direct editing of its metadata and descriptions. You can upgrade Core ML models from the .mlmodel format to the .mlpackage format in a model’s Utilities tab. (69867656)
+* Xcode의 Core ML model editor는 이제 metadata 및 package format과 함께 새로운 Core ML 패키지 형식인 .mlpackage를 지원합니다. model들의 Utilities tab에서 Core ML model을 .mlmodel 형식에서 .mlpackage 형식으로 업그레이드할 수 있습니다. (69867656)
 
-* The Swift generated interface for Core ML models now includes access to multidimensional inputs and outputs via strongly-typed MLShapedArray properties when your deployment target is macOS 12, iOS 15, tvOS 15 or watchOS 8. (73627777)
+* 이제 Swift에서 생성한  Core ML models interface는 배포 대상이 macOS 12, iOS 15, tvOS 15 또는 watchOS 8인 경우 강력한 형식의 `MLShappedArray` properties를 통해 다차원 입력 및 출력에 대한 액세스를 포함됩니다. (73627777)
 
 ### Resolved Issues
-* Resolved an issue in macOS 11 where the preview tab for CoreML model packages might not respond or might fail with an “Unable to compile model at <ModelName>.mlpackage” error. (77794983)
+* macOS 11 에서 CoreML 모델 패키지의 preview 탭이 응답하지 않거나 "Unable to compile model at <ModelName>.mlpackage" 오류의 문제가 해결되었습니다. (77794983)
 
-* Resolved an issue where the operation distribution table didn’t appear in the General tab when viewing the model in the Xcode editor for ML Packages in the ML Program format that have no class labels. (78577088)
+* class labels가 없는 ML Program format의 ML Packages를 Xcode editor에서 model을 볼 때 operation distribution table이 General tab에 나타나지 않는 문제를 해결했습니다. (78577088)
 
 ### Known Issues
-* Create ML app machine learning model training performance may be unexpectedly reduced when running in macOS Monterey. (82415543)
+* macOS Monterey에서 실행할 때 ML 앱 머신러닝 모델 학습 성능이 예기치 않게 저하될 수 있습니다. (82415543)
 
-* Quitting the Create ML app or closing a project while training is still running may result in the loss of training progress. (82460651)  
-  Workaround: Pause training before quitting the app or closing a project.
+* training progress가 계속 실행되는 동안 Create ML 앱을 종료하거나 프로젝트를 닫으면 training 진행 상황이 손실될 수 있습니다. (82460651)  
+  해결 방법: 앱을 종료하거나 프로젝트를 닫기 전에 교육을 일시 중지합니다.
 
 ## Create ML
 ### New Features
