--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -184,36 +184,34 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Create ML
 ### New Features
-* Two new templates are available for training models to interpret hand poses. (68942553)
+* 손 포즈를 해석하는 새로운 templates인 training models 사용할 수 있습니다. (68942553)
+  * 손 포즈 분류는 image에서 static 손 포즈를 분류하기 위한 model을 training합니다.
+  * 손 동작 분류는 video에서 dynamic 손 액션들을 분류하기 위한 model을 training합니다.
 
-  * Hand Pose Classification trains a model for categorizing a static hand pose in an image.
-
-  * Hand Action Classification trains a model for categorizing dynamic hand actions in video.
-
-* The Sound Classification template’s new Audio Feature Print option enables you to train sound classifier models faster with higher accuracy, lower latency, and smaller model size. This is now the default feature extraction option for new model sources. (70558475)
+* 사운드 분류 templates의 Audio Feature Print option을 사용하면 sound classifier models을 더 높은 정확도, lower latency 및 smaller model size로 더 빠르게 교육할 수 있습니다. 이것은 이제 새 모델 소스에 대한 기본 기능 추출 옵션입니다.  (70558475)
 
 ## Debugging
 ### New Features
-* Xcode’s console now supports toggling line wrapping through the Editor > Wrap Lines menu item. (3669727)
+* 이제 Xcode의 콘솔은 `Editor > Wrap Lines` menu item을 통한 Line 전환을 지원합니다. (3669727)
 
-* To set a column breakpoint on a line, Command-click on an expression then select Set Column Breakpoint from the Actions menu. (10112530)
+*  column breakpoint on a line을 설정하려면 Command-click을 클릭한 다음 Actions 메뉴에서 Set Column Breakpoint 설정을 선택합니다. (10112530)
 
-* If the debugger hasn’t resolved a breakpoint yet, the breakpoint’s icon changes into a placeholder glyph. For some breakpoints, such as a symbolic breakpoint, the icon changes back to the original glyph when the associated shared library is loaded into the process. (11439048)
+* 만약 debugger에서 breakpoint를 해결하지 않은 경우 breakpoint’s icon이 placeholder glyph으로 변경됩니다. symbolic breakpoint과 같은 일부 breakpoints의 경우 연결된 공유 라이브러리가 프로세스에 로드되면 original glype 아이콘으로 다시 변경됩니다. (11439048)
 
 ### Resolved Issues
-* Resolved an issue that caused Xcode to indefinitely display a window saying “Building Memory Graph” when clicking the “debug memory graph” button resulted in a failure. Xcode now promptly displays any error that causes memory graph retrieval to fail. (59479311)
+* "debug memory graph" 버튼을 클릭하면 Xcode가 "Building Memory Graph"라는 창을 무한 표시되는 문제를 해결했습니다. 이제 Xcode는 메모리 그래프 검색을 실패하게 하는 모든 오류를 즉시 표시합니다. (59479311)
 
-* Choosing Debug > Simulate MetricKit Payloads now works when debugging an app running in a macOS, macOS “Designed for iPad”, or Mac Catalyst run destination. (78026869)
+* Debug > Simulate MetricKit Payloads을 선택하면 이제 macOS, macOS "Designed for iPad" 또는 Mac Catalyst 실행 대상에서 실행 중인 앱을 debugging할 때 작동합니다. (78026869)
 
 ### Deprecations
-* LLDB’s Python scripting no longer supports Python 2. (73956573)
+* LLDB의 Python 스크립팅은 더 이상 Python 2를 지원하지 않습니다. (73956573)
 
 ## Documentation
 ### New Features
-* Xcode can generate documentation from comments in your Swift code, as well as accompanying articles. (57148915, 57446055, 57447632, 74951110)  
-  Use the “Build Documentation” command to generate documentation from your Swift frameworks and packages. Build on the command-line using the xcodebuild docbuild command. For more information on building documentation, see Documenting a Swift Framework or Package.
+* Xcode는 Swift 코드의 주석과 함께 동봉된 문서를 생성할 수 있습니다. (57148915, 57446055, 57447632, 74951110)  
+  “Build Documentation” command을 사용하여 Swift frameworks 및 packages에서 문서를 생성합니다. `xcodebuild docbuild` command를 사용하여 command-line에서 빌드합니다. 문서 작성에 대한 자세한 사항은 [<i class="fas fa-link"></i> Documenting a Swift Framework or Package](https://developer.apple.com/documentation/Xcode/documenting-a-swift-framework-or-package)를 참조하세요.
 
-* View built documentation in the documentation window, and export using the DocC Archive format. Xcode can open and read DocC Archive packages. For more information, see Distributing Documentation to External Developers.
+  documentation window에서 작성된 문서를 보고 DocC 아카이브 형식을 사용하여 내보냅니다. Xcode는 DocC Archive format을 열고 읽을 수 있습니다.. Xcode can open and read DocC Archive packages. 자세한 사항은 [<i class="fas fa-link"></i> Distributing Documentation to External Developers.](https://developer.apple.com/documentation/Xcode/distributing-documentation-to-external-developers)를 참조하세요.
 
 * Code completion provides suggestions when you write your project’s documentation. It provides suggestions both when writing documentation comments in source files, and when writing markup files inside the .docc catalog. (57447419)
 
