--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -65,11 +65,8 @@ Xcode 13에는 iOS 15, iPadOS 15, tvOS 15, watchOS 8 및 macOS Big Sur 11.3용 S
 ## General
 ### New Features
 * Xcode 13에는 [<i class="fas fa-link"></i> Swift 를 사용한 동시성 프로그래밍](https://docs.swift.org/swift-book/LanguageGuide/Concurrency.html){:target="_blank"}에 대한 기본 지원, [<i class="fas fa-link"></i> Xcode Cloud](https://developer.apple.com/xcode-cloud/){:target="_blank"}와의 지속적인 통합 및 전달 지원, Git pull 요청에 대한 통합 지원, DocC를 사용하여 Swift 프레임워크에서 문서를 생성하고 볼 수 있는 기능, Vim 키 바인딩 지원, Swift 패키지 컬렉션 등을 지원합니다.(78887232)
-
 * 이제 cktool command line에서 cktool을 사용하여 [<i class="fas fa-link"></i> CloudKit](https://developer.apple.com/documentation/cloudkit){:target="_blank"} database schema 및 records 와 상호 작용할 수 있습니다. 사용 가능한 명령 목록을 보려면 `run man cktool ` 또는 `xcrun cktool --help`를 실행하십시오.(68114031)
-
 * 이제 command line에서 TextureConverter 사용 하여 textures를 모든 Metal compressed texture formats으로 압축할 수 있습니다. 사용 가능한 명령 목록을 보려면 `TextureConverter --help`를 실행하십시오. (70481436)
-
 * Xcode 13의 XIP archive는 이제 동일한 콘텐츠에 대해 약 15% 더 작아졌습니다. archive Utility를 사용하거나 xip command line 에서 archive를 expand 할 수 있습니다. Note: archive를 expanding하는 다른 방법으로 인해 Xcode 앱이 손상될 수 있습니다. (78714333)
 
 ### Resolved Issues
@@ -78,7 +75,6 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 ## Apple Clang Compiler
 ### New Features
 * new Swift concurrency model을 지원하기 위해 clang이제 completion handler를 두 번 이상 호출하거나 실행 경로에 완료 핸들러 호출이 없는 경우 경고할 수 있습니다. new Warnings를 켜려면 Apple Clang - Warnings - All languages section의 project’s Build Settings에서 Completion Handler Misuse pop-up menu를 Yes를 선택합니다. 또는 clang command line에서 호출할 때 `-Wcompletion-handler flag`를 전달합니다. 메서드에 `NS_SWIFT_DISABLE_ASYNC` 속성을 추가하여 메서드에 대한 경고를 표시하지 않을 수 있으며, 이것은 또한 이 메서드를 Swift에서 async 메서드로 변환하는 것을 억제합니다. (10708075)
-
 * The new `-fobjc-constant-literals flag` 사용하면 전역 상수 literals을 선언하고, Objective-C 코드에서 지원하는 다른 literals에 대한 optimizations를 수행할 수 있습니다. 이 flag를 사용 하여 compile time에 embed static property list literals(NSDictionary, NSNumber, and NSArray)를, binaries의 CONST 섹션에 배치합니다. (44920795, 45380392)<br/><br/>
   For example:
   ```swift
@@ -112,7 +108,6 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
   static NSDictionary * const myConstantDictionary = @{ @42 : @@"answer to life" }; 
   ```
 * 이제 Xcode의 빌드 설정에서 C++20및 GNU++20C++ language dialects를 구성할 수 있습니다. (50900425)
-
 * clang은 이제 C++20 likelihood attributes 인 [[likely]], [[unlikely]]을 지원합니다.
 
 ### Known Issues
@@ -121,7 +116,6 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 ## Asset Catalogs
 ### New Features
 * runtime 시 앱은 이제 자산 카탈로그의 iOS 앱 아이콘 자산을 대체 앱 아이콘으로 사용할 수 있습니다. new build 에서 "`Include all app icon assets,`"는 Xcode가 빌드된 제품에 모든 앱 아이콘 세트를 포함하는지 여부를 제어합니다. 설정이 비활성화된 경우, Xcode에는 새 설정인 "`Alternate app icon sets.`"에 지정된 아이콘과 함께 기본 앱 아이콘이 포함됩니다. asset catalog compiler는 빌드된 제품의 Info.plist에 적절한 콘텐츠를 삽입합니다. (33600923)
-
 * asset catalog를 통해 watchOS를 포함한 모든 플랫폼에서 사용할 수 있는 universal system colors를 선택할 수 있습니다.(73257675)
 
 ## Build System
@@ -134,28 +128,19 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
       $(SRCROOT)/include/component1 \
       $(SRCROOT)/include/component2
   ```
-*
+
 * -xcconfig command-line와 `XCODE_XCCONFIG_FILE` 환경 변수를 사용하여 xcconfig 파일을 xcodebuild에 전달할 때, Xcode는 조건 매개변수도 지원하는 New Build System semantics을 사용하여 구문 분석합니다. (25001734)
-
 * `SUPPORTED_PLATFORMS` 빌드 설정을 지원하는 platforms 목록으로 설정 하려면, `ALLOW_TARGET_PLATFORM_SPECIALIZATION`을 YES로 설정하여 단일 빌드 작업에서 multiple platforms에 대해로 빌드하도록 프레임워크를 구성합니다. (45951215)
-
 * 이제 지원되는 모든 플랫폼에 대한 빌드 단계 및 대상 종속성에서 플랫폼 필터를 사용할 수 있습니다. (72240935)
-
 * xcodebuild는 이제 빌드 실패가 발생할 때 빌드 로그 끝에 있는 요약에 실패한 각 명령의 대상 및 프로젝트 이름을 표시합니다. (75081458)
-
 * 이제 build system은 script phase, 또는 custom build rule이 빌드 입력에 속하지 않고, 빌드의 다른 작업의 output dependency로 선언되지 않은 input dependency를 선언하면 경고를 내보냅니다. (76129954)
-
-*  build options sheet에 `Parallelize Build option`을 대체하는 `Dependency Order option`과 deprecated 되었으나 레거시 호환성을 위해 포함된 `Manual Order option`이 포함되어 있습니다. (76251439)
+* build options sheet에 `Parallelize Build option`을 대체하는 `Dependency Order option`과 deprecated 되었으나 레거시 호환성을 위해 포함된 `Manual Order option`이 포함되어 있습니다. (76251439)
 
 ### Resolved Issues
 * iOS 및 iPadOS, tvOS 및 watchOS SDK에 대해 빌드할 때 `NATIVE_ARCH` 빌드 설정을 armv7로 설정하는 문제를 수정했습니다. `NATIVE_ARCH` 빌드 설정은 이제 호스트 Mac의 아키텍처 제품군(Apple 실리콘이 있는 Mac의 arm64 또는 Intel 기반 Mac의 x86_64)을 반영합니다. (5716560)
-
 * iOS, tvOS 또는 watchOS용으로 빌드할 때 framework target 에서 XCTest 또는 StoreKitTest 가져오기 시 linker error 발생 오류가 발생하지 않습니다. (61952138)
-
 * "redefinition of module" 오류가 발생할 수 있는 public and private module maps이 있는 frameworks와 관련된 dependency ordering issue를 수정했습니다. (72123120)
-
 * issue navigator 에서 warning 또는 error를 클릭해도 연결된 C 또는 C++ 파일로 이동하지 않는 문제가 수정되었습니다. (73582669) (FB8981116)
-
 * build system service crashed가 발생된 경우 workspace를 닫았다가 다시 열어야 하는 문제가 수정되었습니다. 이제 workspace에서 다시 빌드를 시도할 수 있습니다. (74124183)
 
 ### Deprecations
@@ -168,17 +153,14 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 ## Core ML
 ### New Features
 * Xcode의 Core ML model editor는 이제 metadata 및 package format과 함께 새로운 Core ML 패키지 형식인 .mlpackage를 지원합니다. model들의 Utilities tab에서 Core ML model을 .mlmodel 형식에서 .mlpackage 형식으로 업그레이드할 수 있습니다. (69867656)
-
 * 이제 Swift에서 생성한  Core ML models interface는 배포 대상이 macOS 12, iOS 15, tvOS 15 또는 watchOS 8인 경우 강력한 형식의 `MLShappedArray` properties를 통해 다차원 입력 및 출력에 대한 액세스를 포함됩니다. (73627777)
 
 ### Resolved Issues
 * macOS 11 에서 CoreML 모델 패키지의 preview 탭이 응답하지 않거나 "Unable to compile model at <ModelName>.mlpackage" 오류의 문제가 해결되었습니다. (77794983)
-
 * class labels가 없는 ML Program format의 ML Packages를 Xcode editor에서 model을 볼 때 operation distribution table이 General tab에 나타나지 않는 문제를 해결했습니다. (78577088)
 
 ### Known Issues
 * macOS Monterey에서 실행할 때 ML 앱 머신러닝 모델 학습 성능이 예기치 않게 저하될 수 있습니다. (82415543)
-
 * training progress가 계속 실행되는 동안 Create ML 앱을 종료하거나 프로젝트를 닫으면 training 진행 상황이 손실될 수 있습니다. (82460651)  
   해결 방법: 앱을 종료하거나 프로젝트를 닫기 전에 교육을 일시 중지합니다.
 
@@ -187,20 +169,16 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * 손 포즈를 해석하는 새로운 templates인 training models 사용할 수 있습니다. (68942553)
   * 손 포즈 분류는 image에서 static 손 포즈를 분류하기 위한 model을 training합니다.
   * 손 동작 분류는 video에서 dynamic 손 액션들을 분류하기 위한 model을 training합니다.
-
 * 사운드 분류 templates의 Audio Feature Print option을 사용하면 sound classifier models을 더 높은 정확도, lower latency 및 smaller model size로 더 빠르게 교육할 수 있습니다. 이것은 이제 새 모델 소스에 대한 기본 기능 추출 옵션입니다.  (70558475)
 
 ## Debugging
 ### New Features
 * 이제 Xcode의 콘솔은 `Editor > Wrap Lines` menu item을 통한 Line 전환을 지원합니다. (3669727)
-
-*  column breakpoint on a line을 설정하려면 Command-click을 클릭한 다음 Actions 메뉴에서 Set Column Breakpoint 설정을 선택합니다. (10112530)
-
+* column breakpoint on a line을 설정하려면 Command-click을 클릭한 다음 Actions 메뉴에서 Set Column Breakpoint 설정을 선택합니다. (10112530)
 * 만약 debugger에서 breakpoint를 해결하지 않은 경우 breakpoint’s icon이 placeholder glyph으로 변경됩니다. symbolic breakpoint과 같은 일부 breakpoints의 경우 연결된 공유 라이브러리가 프로세스에 로드되면 original glype 아이콘으로 다시 변경됩니다. (11439048)
 
 ### Resolved Issues
 * "debug memory graph" 버튼을 클릭하면 Xcode가 "Building Memory Graph"라는 창을 무한 표시되는 문제를 해결했습니다. 이제 Xcode는 메모리 그래프 검색을 실패하게 하는 모든 오류를 즉시 표시합니다. (59479311)
-
 * Debug > Simulate MetricKit Payloads을 선택하면 이제 macOS, macOS "Designed for iPad" 또는 Mac Catalyst 실행 대상에서 실행 중인 앱을 debugging할 때 작동합니다. (78026869)
 
 ### Deprecations
@@ -211,74 +189,52 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * Xcode는 Swift 코드의 주석과 함께 동봉된 문서를 생성할 수 있습니다. (57148915, 57446055, 57447632, 74951110)  
   “Build Documentation” command을 사용하여 Swift frameworks 및 packages에서 문서를 생성합니다. `xcodebuild docbuild` command를 사용하여 command-line에서 빌드합니다. 문서 작성에 대한 자세한 사항은 [<i class="fas fa-link"></i> Documenting a Swift Framework or Package](https://developer.apple.com/documentation/Xcode/documenting-a-swift-framework-or-package)를 참조하세요.
 
-  documentation window에서 작성된 문서를 보고 DocC 아카이브 형식을 사용하여 내보냅니다. Xcode는 DocC Archive format을 열고 읽을 수 있습니다.. Xcode can open and read DocC Archive packages. 자세한 사항은 [<i class="fas fa-link"></i> Distributing Documentation to External Developers.](https://developer.apple.com/documentation/Xcode/distributing-documentation-to-external-developers)를 참조하세요.
+  documentation window에서 작성된 문서를 보고 DocC 아카이브 형식을 사용하여 내보냅니다. Xcode는 DocC Archive format을 열고 읽을 수 있습니다. Xcode can open and read DocC Archive packages. 자세한 사항은 [<i class="fas fa-link"></i> Distributing Documentation to External Developers.](https://developer.apple.com/documentation/Xcode/distributing-documentation-to-external-developers)를 참조하세요.
 
-* Code completion provides suggestions when you write your project’s documentation. It provides suggestions both when writing documentation comments in source files, and when writing markup files inside the .docc catalog. (57447419)
-
-* Quick Help now uses DocC to present project documentation and renders links to your project’s documentation in the documentation window. (71913824)
+* 코드 완성은 project documentation을 작성할 때 제안 사항을 제공합니다. 소스 파일에 documentation 주석을 작성할 때와 .docc catalog 내에 마크업 파일을 작성할 때 제안을 제공합니다. (57447419)
+* Quick Help는 이제 DocC를 사용하여 project documentation을 표시하고 documentation window에서 프로젝트 문서에 대한 링크를 렌더링합니다. (71913824)
 
 ### Resolved Issues
-* Links to symbols inherited from protocol conformances now correctly resolve in Quick Help and appear as completion items. (76927387)
-
-* Breadcrumbs in the documentation viewer now consistently reflect the page rendered inside the content view. (78512655) (FB9118964)
+* protocol 준수에서 상속된 symbols에 대한 링크가 이제 Quick Help에서 올바르게 확인되고 완료 항목으로 표시됩니다. (76927387)
+* documentation viewer의 이동 경로는 이제 콘텐츠 보기 내에서 렌더링된 페이지를 일관되게 반영합니다. (78512655) (FB9118964)
 
 ### Known Issues
-* Links to Objective-C types exposed to Swift using a bridging header don’t resolve in Quick Help, and don’t appear as completion items. These links resolve as expected in full documentation builds and in Xcode’s documentation window. (77472074)
+* bridging header를 사용하여 Swift에 노출된 Objective-C 유형에 대한 링크는 Quick Help에서 확인할 수 없으며 완료 항목으로 표시되지 않습니다. 이 링크는 full documentation builds와 Xcode의 documentation window에서 예상대로 해결됩니다. (77472074)
 
 ## Indexing
 ### New Features
-* Xcode indexes macro names. They now appear in Open Quickly. (47815401) (FB5667927)
+* Xcode는 macro names을 인덱싱합니다. 이제 Open Quickly에 나타납니다. (47815401) (FB5667927)
 
 ### Resolved Issues
-* Improved the reliability and performance of the source languages service that provides semantic functionality — such as live issues and code completion — in Xcode editors. (71098549)
-
-  * Improved reliability and addressed instances where the build succeeded, but the editor showed unexpected live issues.
-
-  * Fixed an issue that required you to manually build in order to see source file changes from other modules reflected in the current file. Xcode now takes care of propagating the necessary updates in the background.
-
-  * Improved performance and significantly reduced the CPU usage by the XCBBuildService process, while it’s processing requests from the source languages service.
-
-* Fixed issue where a Swift package with symlinks to source modules would break live issues and code completion in Xcode. (75732781)
+* Xcode 편집기에서 의미론적 기능(live issues 및 code completion과 같은)을 제공하는 소스 언어 서비스의 신뢰성과 성능을 개선했습니다. (71098549)
+  * 신뢰성이 향상되고 빌드가 성공한 사례를 해결했지만 editor에서 예기치 않은 live issues가 발생했습니다.
+  * 현재 파일에 반영된 다른 모듈의 소스 파일 변경 내용을 보려면 수동으로 빌드해야 하는 문제를 해결했습니다. Xcode는 이제 백그라운드에서 필요한 업데이트를 전파합니다.
+  * XCBBuildService 프로세스가 source languages service의 requests를 처리하는 동안 성능이 향상되고 CPU 사용량이 크게 감소했습니다.
+* source modules에 대한 symlinks 있는 Swift package가 Xcode에서 live issues 및 code completion을 중단시키는 문제가 수정되었습니다. (75732781)
 
 ## Instruments
 ### New Features
-* You can now label a Run using the Run’s Info popover in the toolbar’s Activity viewer. (20823928)
+* 이제 toolbar’s의 Activity viewer의 Run’s Info popover를 사용하여 실행 label을 지정할 수 있습니다. (20823928)
+* 이제 Instruments의 Call tree views 및 extended detail view가 "[inlined]" 마커로 인라인 기능을 표시합니다. (36153516)
+* detail view navigation bar을 통해 더 보기를 더 쉽게 검색할 수 있습니다. 이제 shortcuts(Command-1, Command-2 등)를 통해 Detail views에 액세스할 수 있습니다. 이제 View menu에서 Run Issues 및 Console views에 액세스할 수 있습니다. (45734644)
+* command line에서 `xctrace export`를 사용하여 Allocations, Leaks 및 VM Tracker instruments를 포함하는 table data를 내보낼수 있습니다. 목차에 이 기능이 어떻게 반영되는지 보려면 `run xctrace export --toc`를 실행하십시오. (54600972)
+* Instruments extended detail view는 이제 관련 detail view row를 선택할 때 `os_log` 및 `os_signpost` 메시지와 backtraces을 표시합니다. (63098516, 72104089) (FB7697641)
+* 이제 Instruments toolbar의 activity view area에 Run Information view가 나타납니다. (65694190)
+* 이제 CPU Counters template의 안정성과 성능이 향상되었습니다. Instruments 13은 이전 버전의 Instruments로 기록된 Counters traces을 더 이상 지원하지 않습니다. (65812748)
+* leaks command는 `-referenceTree`, `-autoreleasePools` 및 `-debug`의 세 가지 새로운 모드가 있습니다. 자세한 내용은 `man leaks`에 을 찾으세요. (68724178)
+* 이제 Network template에 HTTP traffic을 capturing, analyzing하기 위한 새로운 Instrumen가 포함됩니다. 이 Instrumen는 모든 Apple platforms에서 작동하며 다음을 보여줍니다:
+  * out-of-process background traffic을 포함하여 debuggable processes에 대한 [<i class="fas fa-link"></i> CFNetwork](https://developer.apple.com/documentation/cfnetwork)){:target="_blank"} layer의 HTTP traffic
+  * 각 [<i class="fas fa-link"></i>URLSessionTask](https://developer.apple.com/documentation/foundation/urlsessiontask){:target="_blank"}, 기본 HTTP transactions 및 transaction states에 대한 자세한 기간
+  * `URLSessionTasks`에 대한 Backtraces는 code에서 task가 어디서 시작되는지 표시
+  * HTTP requests, responses의 Headers 및 본문
+  * VPN, Proxies를 통한 traffic, certificate pinning을 사용하여 전송되는 traffic
+  
+  새로운 `--har` 내보내기 플래그를 사용하여 `xctrace`를 통해 이 HTTP data를 HTTP Archive로 내보낼 수 있습니다. (71444535)
+* 이제 Instruments timeline view에서는 Metal 기반 렌더러를 사용하여 timeline 사용성이 전반적으로 향상되는 등 보다 부드러운 환경을 제공합니다. (73591705)
+* `os_signpost` Instrument의 recording settings은 이제 recording에 `dynamicTracing` 및 `dynamicStackTracing` logging categories에 대한 `os_signpost` 하위 시스템 지정을 지원합니다. (73694990)
+* 새로운 CPU Profiler template을 사용하면 PMI(Cycle-Based Performance Monitoring Interrupts)를 사용하여 CPU workloads를 analyzing할 수 있습니다. 실행되는 코드 또는 Efficiency CPU에 대해 보다 안정적으로 측정할 수 있습니다. (76889185)
 
-* Call tree views and the extended detail view in Instruments now indicate inlined functions with an “[inlined]” marker. (36153516)
-
-* Different views are more discoverable via the detail view navigation bar. Detail views can now be accessed via shortcuts (Command-1, Command-2, and so on). You can now access the Run Issues and Console views from the View menu. (45734644)
-
-* Export table data from traces containing Allocations, Leaks, and VM Tracker instruments using xctrace export on the command line. To see how the table of contents now reflects this ability, run xctrace export --toc. (54600972)
-
-* The Instruments extended detail view now shows os_log and os_signpost messages and backtraces when selecting associated detail view rows. (63098516, 72104089) (FB7697641)
-
-* The Run Information view now appears in the activity view area in the Instruments toolbar. (65694190)
-
-* The CPU Counters template is now more reliable and has better performance. Instruments 13 no longer supports Counters traces recorded with older versions of Instruments. (65812748)
-
-* The leaks command has three new modes: -referenceTree, -autoreleasePools, and -debug. Consult man leaks for more details. (68724178)
-
-* The Network template now includes a new Instrument for capturing and analyzing HTTP traffic. This Instrument works on all Apple platforms and shows:
-
-  * HTTP traffic at the CFNetwork layer for debuggable processes, including out-of-process background traffic
-
-  * Detailed durations for each URLSessionTask, its underlying HTTP transactions, and transaction states
-
-  * Backtraces for URLSessionTasks to show where tasks start in code
-
-  * Headers and bodies of HTTP requests and responses
-
-  * Traffic sent over VPN, via Proxies, and using certificate pinning
-
-  You can export this HTTP data to an HTTP Archive via xctrace using the new --har export flag. (71444535)
-
-* The Instruments timeline view now uses a Metal-based renderer for a smoother experience, including overall improvements to the timeline usability. (73591705)
-
-* Recording settings for the os_signpost Instrument now supports specifying os_signpost subsystems for the dynamicTracing and dynamicStackTracing logging categories during recording. (73694990)
-
-* A new CPU Profiler template allows for analyzing CPU workloads using Cycle-based Performance Monitoring Interrupts (PMIs). It provides a more stable measurement for code running on Performance or Efficiency CPUs. (76889185)
-
-* To support the new JSON-format crash logs generated in macOS Monterey and iOS 15, Instruments includes a new CrashSymbolicator.py script. This Python 3 script replaces the symbolicatecrash utility for JSON-format logs and supports inlined frames with its default options. For more information, see: CrashSymbolicator.py --help. CrashSymbolicator.py is located in the Contents/SharedFrameworks/CoreSymbolicationDT.framework/Resources/ subdirectory within Xcode 13. (78891800)
+* macOS Monterey 및 iOS 15에서 생성된 새로운 JSON-format crash logs를 지원하기 위해 Instruments에는 새 `CrashSymbolicator.py` script가 포함되어 있습니다. 이 Python 3 script는 JSON-format logs에 대한 `symbolatecrash` 유틸리티를 대체하고 기본 옵션으로 inlined frames을 지원합니다. 자세한 내용은 CrashSymbolicator.py --help를 참조하세요. CrashSymbolicator.py는 Xcode 13 내의 Contents/SharedFrameworks/CoreSymbolicationDT.framework/Resources/ 하위 디렉토리에 있습니다. (78891800)
 
 ### Resolved Issues
 * Fixed an issue where changing arguments in Xcode and invoking the profile action wasn’t reusing an existing trace document. (41842858)
