[Post] Instruments 번역 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -237,20 +237,20 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * macOS Monterey 및 iOS 15에서 생성된 새로운 JSON-format crash logs를 지원하기 위해 Instruments에는 새 `CrashSymbolicator.py` script가 포함되어 있습니다. 이 Python 3 script는 JSON-format logs에 대한 `symbolatecrash` 유틸리티를 대체하고 기본 옵션으로 inlined frames을 지원합니다. 자세한 내용은 CrashSymbolicator.py --help를 참조하세요. CrashSymbolicator.py는 Xcode 13 내의 Contents/SharedFrameworks/CoreSymbolicationDT.framework/Resources/ 하위 디렉토리에 있습니다. (78891800)
 
 ### Resolved Issues
-* Fixed an issue where changing arguments in Xcode and invoking the profile action wasn’t reusing an existing trace document. (41842858)
+* Xcode에서 arguments를 변경하고 프로필 작업을 호출할 때 기존 trace document를 재사용하지 않는 문제가 수정되었습니다. (41842858)
 
-* Improved the performance of command-line tools like malloc_history by up to 300x when targeting processes that were built with large static archives. (63114609) (FB7698032)
+* 대규모 static archives로 구축된 프로세스를 대상으로 할 때 `malloc_history`와 같은 command-line tools의 성능이 최대 300배 향상되었습니다. (63114609) (FB7698032)
 
-* Instruments now more reliably displays inlined frames in backtraces when DWARF data is available. (74351555)
+* 이제 Instruments는 DWARF 데이터를 사용할 수 있을 때 backtraces에서 inlined frames을 보다 안정적으로 표시합니다. (74351555)
 
-* Improved Instruments’ launch reliability when slow or unresponsive devices are connected. (77151140)
+* 느리거나 응답하지 않는 장치가 연결되어 있을 때 Instruments의 실행 안정성이 향상되었습니다. (77151140)
 
-* You can now stop HTTP Traffic recording initiated from Instruments, in tvOS 15’s Control Center. (77274053)
+* 이제 tvOS 15’s Control Center에서 Instruments에서 시작된 HTTP Traffic recording을 중지할 수 있습니다.. (77274053)
 
 ### Deprecations
-* Instruments no longer includes the Energy template; use metrics reporting in the Xcode Organizer instead. (74161279)
+* Instruments는 더 이상 Energy template이 포함되지 않습니다. 대신 Xcode Organizer에서 metrics reporting을 사용하십시오. (74161279)
 
-* The deprecated instruments command-line tool has been removed; instead, use xctrace. (74412969)
+* deprecated instruments command-line tool이 제거되었습니다. 대신 `xctrace`를 사용하십시오. (74412969)
 
 ## Interface Builder
 ### New Features
