[Post] Interface Builder - New Features 적용

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -254,64 +254,36 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Interface Builder
 ### New Features
-* You can now manually reorder Storyboard scenes in the outline view. (10103709)
-
-* Storyboards and XIBs for macOS compile using UINibEncoder to reduce file sizes and improve runtime performance. When deploying an App before macOS 10.13, Xcode generates a backward compatible nib for the older OSes. You can opt out of this behavior by applying the IBC_COMPILER_USE_NIBKEYEDARCHIVER_FOR_MACOS=YES and IBSC_COMPILER_USE_NIBKEYEDARCHIVER_FOR_MACOS=YES user defined overrides in the project’s build setting. (31889616)<br/><br/>
-  UINibEncoded nibs are stricter about enforcing the return of self from an initWithCoder: implementation on custom classes. Returning a nonsafe pointer from initWithCoder: is unsafe and can lead to dangling pointer references. macOS 12 emits a descriptive warning when this occurs during runtime nib loading. Older macOS versions emit “This coder requires that replaced objects be returned from initWithCoder:”. If necessary, you can bypass the strictness warning by applying the user defined overrides described above.
-
-* You can now select and navigate outline view groups, such as “Constraints,” using the keyboard. Selecting a group is equivalent to selecting all of the items contained in the group. (46607897)
-
-* Interface Builder has a redesigned canvas bottom bar with popovers for changing devices and layout, and toggles for changing device appearance and orientation. (68288315)
-
-* Added support for the changesSelectionAsPrimaryAction property on UIButton and UIBarButtonItem. Use this, along with setting a menu and enabling showsMenuAsPrimaryAction to create a Pop-Up button. (69890483)
-
-* Support for authoring and dragging iOS Core Location Buttons from the object library. The Core Location button grants a one-time authorization of the device’s current location when pressed. A project must link the CoreLocationUI framework to use CLLocationButton. (70781230)
-
-* Improved reproducibility when compiling binary nibs from iOS storyboards and xibs. (71004831)
-
-* Added support for the new content configuration styles for use on table view cells within static table views. (71258693)
-
-* UITabBar and UIToolbar inspectors now support configuring scrollEdgeAppearance. (71788169)
-
-* Interface Builder now supports UIButton.menu. (72059569)
-
-* When editing launch storyboards, Xcode emits a design time warning if the total image resource size exceeds the runtime threshold limits. (72349945)
-
-* The preview pane for Watch Storyboards now displays canvas style bezels instead of photorealistic bezels. (73070504)
-
-* You can now preview the following accessibility settings in Interface Builder scenes: Dynamic Type, Bold Text, Button Shapes, On/Off Labels, Increase Contrast, and Reduce Transparency. You can activate these settings by clicking on the accessibility button in the canvas button bar and setting them in the accessibility popover. (73208721)
-
-* You can now enable UILabel’s showsExpansionTextWhenTruncated property to show tool tip expansion when the label is truncated. (73581591)
-
-* Customize Mac Catalyst simulated scene sizes from Document Inspector > Simulated Metrics > Scene Sizes. (73587968)
-
-* Specify tooltips on UIControl objects through the attributes inspector for apps built with Mac Catalyst. (73594175)
-
-* Interface Builder now supports UIBarButtonItem.menu. Use this along with the UIBarButtonItem.changesSelectionAsPrimaryAction property to create a pop-up button. (73671137)
-
-* Interface Builder now supports new UITextContentType properties, including: shipmentTrackingNumber, flightNumber, and dateTime. (73769660)
-
-* iOS, iPadOS, macOS, and tvOS scenes support the two new SF Symbol rendering modes: hierarchical and palette. (73774179)
-
+* 이제 outline view에서 Storyboard scenes을 수동으로 재정렬할 수 있습니다. (10103709)
+* macOS용 Storyboards 및 XIBs는 UINibEncoder를 사용하여 compile하여 file sizes를 줄이고 runtime performance를 개선합니다. macOS 10.13 이전의 앱을 배포할 때 Xcode는 이전 OS들에 대해 이전 버전과 호환되는 nib을 생성합니다. 이 동작을 수행하지 않으려면 project’s build setting의 user defined `IBC_COMPILER_USE_NIBKEYEDARCHIVER_FOR_MACOS=YES` 및 `IBSC_COMPILER_USE_NIBKEYEDARCHIVER_FOR_MACOS=YES` 재정의합니다. (31889616)<br/><br/>
+  UINibEncoded nibs는 [<i class="fas fa-link"></i> initWithCoder:](https://developer.apple.com/documentation/foundation/nsnotification/1412464-initwithcoder){:target="_blank"} 구현에서 self 반환이 implementation된custom class에 적용하는 데 더 엄격합니다. `initWithCoder:`에서 nonsafe pointer를 return하는 것은 안전하지 않으며 dangling pointer 참조로 이어질 수 있습니다. macOS 12는 runtime nib load중 이러한 문제가 발생하면 descriptive warning를 표시합니다. 이전 macOS 버전은 "This coder requires that replaced objects be returned from initWithCoder:"를 내보냅니다. 필요한 경우 위에서 설명한 user defined overrides를 적용하여 strictness warning를 무시할 수 있습니다.
+* 이제 키보드를 사용하여 "Constraints,"과 같은 navigate outline view groups을 선택하고 탐색할 수 있습니다. group을 선택하는 것은 group에 포함된 모든 items를 선택하는 것과 같습니다. (46607897)
+* Interface Builder에는 device 및 layout을 변경할 수 있는 popovers와 재설계된 canvas bottom bar가 있으며 device appearance과 orientation을 변경할 수 있도록 토글합니다. (68288315)
+* `UIButton` 및 `UIBarButtonItem`의 `changesSelectionAsPrimaryAction` 속성에 대한 지원이 추가되었습니다. 메뉴를 설정하고 `showMenuAsPrimaryAction`을 활성화하여 Pop-Up button을 만듭니다. (69890483)
+* object library에서 iOS Core Location Buttons authoring 및 dragging를 지원합니다. Core Location button을 누르면 device의 current location에 대한 일회성 권한이 부여됩니다. project는 `CLLocationButton`을 사용하기 위해 CoreLocationUI framework를 연결해야 합니다. (70781230)
+* iOS storyboards 및 xib에서 binary nibs를 컴파일할 때 재현성이 개선되었습니다. (71004831)
+* static table views의 table view cells에 사용할 new content configuration styles에 대한 지원이 추가되었습니다. (71258693)
+* UITabBar 및 UIToolbar inspectors는 이제 `scrollEdgeAppearance` 구성을 지원합니다. (71788169)
+* Interface Builder는 이제 `UIButton.menu`를 지원합니다. (72059569)
+* launch storyboards를 편집할 때 Xcode는 total image resource size가 runtime threshold limits을 초과하면 design time warning를 표시합니다. (72349945)
+* 이제 Watch Storyboards의 preview에 photorealistic bezels 대신 canvas style bezels이 표시됩니다. (73070504)
+* 이제 Interface Builder scenes에서 다음 accessibility 설정을 미리 볼 수 있습니다. Dynamic Type, Bold Text, Button Shapes, On/Off Labels, Increase Contrast, and Reduce Transparency. canvas button bar에서 accessibility button을 클릭하고 accessibility popover에서 설정을 지정하여 이러한 설정을 활성화할 수 있습니다. (73208721)
+* 이제 `UILabel`의 `showsExpansionTextWhenTruncated` property를 활성화하여 label이 잘릴 때 tool tip 확장을 표시할 수 있습니다. (73581591)
+* Document Inspector > Simulated Metrics > Scene Sizes에서 Mac Catalyst simulated scene sizes를 Customize합니다. (73587968)
+* Mac Catalyst로 빌드된 앱의 attributes inspector를 통해 `UIControl` object에 대한 tooltips을 지정합니다. (73594175)
+* Interface Builder는 이제 `UIBarButtonItem.menu`를 지원합니다. 이것을 `UIBarButtonItem.changesSelectionAsPrimaryAction` property를 함께 사용하여 pop-up button을 만듭니다. (73671137)
+* Interface Builder는 이제 `shippingTrackingNumber`, `flightNumber` 및 `dateTime`을 포함한 새로운 `UITextContentType` properties를 지원합니다. (73769660)
+* iOS, iPadOS, macOS 및 tvOS scenes은 hierarchical 및 palette라는 두 가지 새로운 SF Symbol를 지원합니다. (73774179)
 * When you select an SF Symbol, you can select either of the following modes from the render mode drop-down:
-
-* Use hierarchical mode to customize the symbol’s primary layer color. The other layers draw with reduced alpha blended versions of the primary color.
-
-* Use palette mode to specify colors for each individual layer.
-
-* Interface Builder now supports authoring buttons with UIButtonConfiguration styles, including Plain, Gray, Tinted, and Filled. (73789335)
-
-* UINavigationBar, UITabBar, and UIToolbar inspectors now support configuring a UIBarAppearance instance. (74054594)
-
-* UIButton and UISlider support selecting the preferred behavioral style for apps built with Mac Catalyst. (74260900)
-
-* Storyboard scenes that use Freeform simulated metrics in a view controller’s size inspector are now resizable directly in canvas with resize knobs. (74298762)
-
-* NSButton Bevel types support a Bevel Color in macOS 12. (74537793)
-
-* In apps for macOS 12, you can configure the localized key equivalent options on a non-system NSMenuItem using the localize property in the attributes inspector. (76168930)
-
-* In apps for iOS 15, you can configure the localized key equivalent options on non-system UI menu commands using the localize property in the attributes inspector. (76622527)
+  * hierarchical mode를 사용하여 symbol’s primary layer color를 customize합니다. 다른 layer는 primary color의 감소된 알파 혼합 버전으로 그립니다.
+  * palette mode를 사용하여 각 개별 layer의 color를 지정합니다.
+* Interface Builder는 이제 `Plain`, `Gray`, `Tinted` 및 `Filled`를 포함한 `UIButtonConfiguration` style 버튼 제작을 지원합니다. (73789335)
+* UINavigationBar, UITabBar 및 UIToolbar inspectors는 이제 UIBarAppearance instance configuring을 지원합니다. (74054594)
+* UIButton과 UISlider는 Mac Catalyst로 빌드된 앱에서 선호하는 동작 스타일을 선택할 수 있도록 지원합니다. (74260900)
+* view controller의 size inspector에서 Freeform simulated metrics을 사용하는 Storyboard scenes은 이제 resize knobs를 사용하여 canvas에서 직접 크기를 조정할 수 있습니다. (74298762)
+* NSButton Bevel type은 macOS 12에서 Bevel Color 지원합니다. (74537793)
+* macOS 12용 앱에서 attributes inspector의 localize property를 사용하여 non-system `NSMenuItem`에 대해 localized key에 해당하는 옵션을 구성할 수 있습니다. (76168930)
+* iOS 15용 앱에서 attributes inspector의 localize property를 사용하여 non-system UI menu command에 대해 localized key에 해당하는 옵션을 구성할 수 있습니다. (76622527)
 
 ### Resolved Issues
 * Fixed an issue with canvas rendering and storyboard compilation that involved uninstalled constraints that spanned across UIView hierarchies. (23319744) (FB5697880)
