[Post] Interface Builder - Resolved Issues 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -233,23 +233,17 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * 이제 Instruments timeline view에서는 Metal 기반 렌더러를 사용하여 timeline 사용성이 전반적으로 향상되는 등 보다 부드러운 환경을 제공합니다. (73591705)
 * `os_signpost` Instrument의 recording settings은 이제 recording에 `dynamicTracing` 및 `dynamicStackTracing` logging categories에 대한 `os_signpost` 하위 시스템 지정을 지원합니다. (73694990)
 * 새로운 CPU Profiler template을 사용하면 PMI(Cycle-Based Performance Monitoring Interrupts)를 사용하여 CPU workloads를 analyzing할 수 있습니다. 실행되는 코드 또는 Efficiency CPU에 대해 보다 안정적으로 측정할 수 있습니다. (76889185)
-
 * macOS Monterey 및 iOS 15에서 생성된 새로운 JSON-format crash logs를 지원하기 위해 Instruments에는 새 `CrashSymbolicator.py` script가 포함되어 있습니다. 이 Python 3 script는 JSON-format logs에 대한 `symbolatecrash` 유틸리티를 대체하고 기본 옵션으로 inlined frames을 지원합니다. 자세한 내용은 CrashSymbolicator.py --help를 참조하세요. CrashSymbolicator.py는 Xcode 13 내의 Contents/SharedFrameworks/CoreSymbolicationDT.framework/Resources/ 하위 디렉토리에 있습니다. (78891800)
 
 ### Resolved Issues
 * Xcode에서 arguments를 변경하고 프로필 작업을 호출할 때 기존 trace document를 재사용하지 않는 문제가 수정되었습니다. (41842858)
-
 * 대규모 static archives로 구축된 프로세스를 대상으로 할 때 `malloc_history`와 같은 command-line tools의 성능이 최대 300배 향상되었습니다. (63114609) (FB7698032)
-
 * 이제 Instruments는 DWARF 데이터를 사용할 수 있을 때 backtraces에서 inlined frames을 보다 안정적으로 표시합니다. (74351555)
-
 * 느리거나 응답하지 않는 장치가 연결되어 있을 때 Instruments의 실행 안정성이 향상되었습니다. (77151140)
-
 * 이제 tvOS 15’s Control Center에서 Instruments에서 시작된 HTTP Traffic recording을 중지할 수 있습니다.. (77274053)
 
 ### Deprecations
 * Instruments는 더 이상 Energy template이 포함되지 않습니다. 대신 Xcode Organizer에서 metrics reporting을 사용하십시오. (74161279)
-
 * deprecated instruments command-line tool이 제거되었습니다. 대신 `xctrace`를 사용하십시오. (74412969)
 
 ## Interface Builder
@@ -286,31 +280,19 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * iOS 15용 앱에서 attributes inspector의 localize property를 사용하여 non-system UI menu command에 대해 localized key에 해당하는 옵션을 구성할 수 있습니다. (76622527)
 
 ### Resolved Issues
-* Fixed an issue with canvas rendering and storyboard compilation that involved uninstalled constraints that spanned across UIView hierarchies. (23319744) (FB5697880)
-
-* Fixed @IBDesignable view support for multi-platform targets. (65449051) (FB7964472)
-
-* Fixed an issue that allowed the iPad canvas safe areas to account for the status bar inset. (67828638)
-
-* Fixed an issue where moving items in the outline view could incorrectly reorder them. (69307918) (FB8724081)
-
-* Fixed an issue where Date Formatter‘s Advanced Edit Mode inspector table didn’t properly support Dark Mode. (70051451) (FB8782722)
-
-* Fixed rendering issues for Designables on Macs with Apple silicon. (71782893) (FB8921448)
-
-* Fixed a state restoration issue with outline pane width and visibility. (72184267)
-
-* Fixed issues with Interface Builder and Asset Catalog compatibility with Rosetta enabled on Macs with Apple silicon. (74180445) (FB8999052)
-
-* Improved the Interface Builder inspector’s loading performance. (76425091)
-
-* A font property inspector is now available for the UIButton system configuration styles. (76573915)
-
-* Optional number properties in the inspector no longer have checkboxes to clear values. Instead, a value can be cleared by selecting the value and pressing the delete key. (77109701)
-
-* Fixed a runtime crash issue that occurred when using MKMapView in nibs that ran in macOS 10.15 and earlier. (78522530)
-
-* Xcode no longer resets NSCollectionViewGridLayout.maximumNumberOfRows and NSCollectionViewGridLayout.maximumNumberOfColumns to 0 during document unarchiving. (80157777) (FB9262860)
+* UIView 계층 관련 involved uninstalled constraints을 포함하는 canvas 렌더링 및 storyboard 컴파일 문제가 수정되었습니다. (23319744) (FB5697880)
+* multi-platform targets에 대한 @IBDesignable view 지원이 수정되었습니다. (65449051) (FB7964472)
+* iPad canvas safe areas에서 status bar inset을 허용하는문제를 수정했습니다. (67828638)
+* outline view에서 항목을 이동하면 항목이 잘못 재정렬될 수 있는 문제가 수정되었습니다. (69307918) (FB8724081)
+* `Date Formatter‘s Advanced Edit Mode` inspector table이 `Dark Mode`를 제대로 지원하지 않는 문제를 수정했습니다. (70051451) (FB8782722)
+* Apple 실리콘이 탑재된 Mac의 Designables에 대한 렌더링 문제를 수정했습니다. (71782893) (FB8921448)
+* outline pane width 및 visibility과 관련 state restoration를 수정했습니다. (72184267)
+* Apple 실리콘을 사용하는 Mac에서 활성화된 Rosetta와의 Interface Builder 및 Asset Catalog 호환성 문제를 수정했습니다. (74180445) (FB8999052)
+* Interface Builder inspector’s의 로딩 성능을 개선했습니다. (76425091)
+* 이제 UIButton system configuration styles에 font property inspector를 사용할 수 있습니다. (76573915)
+* inspector의 Optional number properties에는 더 이상 clear values checkboxes가 없습니다. 대신 value를 선택하고 delete key를 눌러 값을 지울 수 있습니다. (77109701)
+* macOS 10.15 및 이전 버전에서 실행되는 nibs에서 [<i class="fas fa-link"></i>  MKMapView](https://developer.apple.com/documentation/mapkit/mkmapview){:target="_blank"}를 사용할 때 발생하는 runtime crash issue를 수정했습니다. (78522530)
+* Xcode는 document unarchiving을 하는 동안 더 이상 `NScollectionViewGridLayout.maximumNumberOfRow` 및 `NScollectionViewGridLayout.maximumNumberOfColumns`를 0으로 reset하지 않습니다. (80157777) (FB9262860)
 
 ## Linking
 ### New Features
