--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -90,7 +90,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
   <br/>
   가능한 경우 compiler는 위의 예와 유사하지만 non-global scope에 있는 명령문도 변환합니다.<br/>
   <br/>
-  컴파일러는 macOS 11, iOS 및 iPadOS 14, tvOS 14, watchOS 7 이상의 배포 대상에서 이 플래그를 지원합니다. 플래그는 기본적으로 활성화되어 있습니다. 상수 리터럴을 완전히 비활성화하려면 `-fno-objc-constant-literals`를 사용합니다. 특정 상수 리터럴 최적화를 선택적으로 비활성화하려면 `-fno-constant-nsnumber-literals, -fno-constant-nsarray-literals` 및 `-fno-constant-nsdictionary-literals`를 사용합니다.<br/>
+  컴파일러는 macOS 11, iOS 및 iPadOS 14, tvOS 14, watchOS 7 이상의 deployment targets에서 이 플래그를 지원합니다. 플래그는 기본적으로 활성화되어 있습니다. 상수 리터럴을 완전히 비활성화하려면 `-fno-objc-constant-literals`를 사용합니다. 특정 상수 리터럴 최적화를 선택적으로 비활성화하려면 `-fno-constant-nsnumber-literals, -fno-constant-nsarray-literals` 및 `-fno-constant-nsdictionary-literals`를 사용합니다.<br/>
   <br/>
   plutil tool은 macOS 11 이상에서 사용할 수 있으며, constant section cbjective-c literals을 사용하여 소스 파일을 생성할 수 있습니다. 예를 들어 다음 명령을 사용하여 .m 파일을 생성할 수 있습니다.
   ```
@@ -296,15 +296,11 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Linking
 ### New Features
-* The dyld shared cache has been split into multiple files. Update any of your tools that inspect the cache to use the new structure. (36378398)
-
-* All programs and dylibs built with a deployment target of macOS 12 or iOS 15 or later now use the chained fixups format. This uses different load commands and LINKEDIT data, and won’t run or load on older OS versions. (49851380)
-
-* dyld2 and dyld3 are unified. There’s now only one dyld on all platforms. (69400751)
-
-* The DriverKit runtime now has a dyld shared cache. (70706923)
-
-* If the DYLD_PRINT_SEARCHING environment variable is set to 1 at launch time, dyld prints out the paths to all locations it searched to find a dylib to load. (76430687)
+* `dyld` shared cache가 여러 파일로 분할되었습니다. 새 구조를 사용하도록 tools that inspect the cache를 업데이트하십시오. (36378398)
+* 이제 macOS 12 또는 iOS 15 이상의 deployment target으로 구축된 모든 프로그램과 `dylibs`는 chained fixups format을 사용합니다. 이렇게 하면 서로 다른 load commands와 `LINKEDIT` data가 사용되며 이전 OS 버전에서는 실행되거나 로드되지 않습니다. (49851380)
+* `dyld2`와 `dyld3`이 통합되었습니다. 이제 모든 플랫폼에 하나의 `dyld`만 있습니다. (69400751)
+* DriverKit runtime에는 이제 `dyld` shared cache가 있습니다. (70706923)
+* `DYLD_PRINT_SEARCHING` environment variable이 launch time에 1로 set된 경우, `dyld`는 로드할 `dylib`을 찾기 위해 검색한 모든 위치에 대한 경로를 print합니다. (76430687)
 
 ### esolved Issues
 * Fixed an issue that allowed editing of the __DATA_CONST region in the dyld shared cache. It’s now read-only. (22175031)
