[Post] Linking - Resolved Issues, Deprecations 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -302,15 +302,13 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 * DriverKit runtime에는 이제 `dyld` shared cache가 있습니다. (70706923)
 * `DYLD_PRINT_SEARCHING` environment variable이 launch time에 1로 set된 경우, `dyld`는 로드할 `dylib`을 찾기 위해 검색한 모든 위치에 대한 경로를 print합니다. (76430687)
 
-### esolved Issues
-* Fixed an issue that allowed editing of the __DATA_CONST region in the dyld shared cache. It’s now read-only. (22175031)
+### Resolved Issues
+* `dyld` shared cache에서 `__DATA_CONST` 영역을 editing할 수 있는 문제를 수정했습니다. 이제 read-only입니다. (22175031)
+* iOS에서 `-pagezero_size` 비호환성 해결. iOS는 이제 `-pagezero_size`를 무시합니다. (69436371) (FB8733025)
+* `-image_base` 옵션이 필수로 필요한 문제를 해결했습니다. `PIE`를 대상으로 할 때 `ld64`는 이제 `-image_base`를 무시합니다. (72143464)
 
-* Resolved -pagezero_size incompatibility in iOS. iOS now ignores -pagezero_size. (69436371) (FB8733025)
-
-* Resolved an issue that required an -image_base option. When targeting PIE, ld64 now ignores -image_base. (72143464)
-
-Deprecations
-The -whatsloaded option isn’t supported anymore. (73366865) (FB8975608)
+### Deprecations
+* `-whatsloaded` 옵션은 더 이상 지원되지 않습니다. (73366865) (FB8975608)
 
 ## Localization
 ### New Features
