--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -312,15 +312,11 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Localization
 ### New Features
-* Xcode can now open Xcode Localization Catalogs (.xcloc) for viewing and editing the translations of strings and other localized assets. As part of this feature, .xcloc is now a package file-type in Finder. To inspect the contents of the localization catalog, use Show Package Contents in Finder. (30024017)
-
-* The new Use Compiler to Extract Swift Strings build setting invokes the Swift compiler to accurately extract string interpolations and string literals from Text(), String(localized:), AttributedString(localized:) initializers, SwiftUI’s LocalizedStringKey, and Foundation’s StringLocalizationKey. Enabling this setting compiles all localized targets in your project when exporting and importing for localization. This build setting is enabled by default on all new projects, but can be opted-in for existing Swift projects. (58023398)
-
-* Added support to genstrings and localization import and export for extracting strings that use the new NSLocalizedAttributedString macro in Objective-C code. (73067097)
-
-* Errors in multiple localizations are now aggregated into a single alert dialog when exporting for localization. (73562452)
-
-* Xcode automatically extracts NSGKFriendListUsageDescription, NSLocationTemporaryUsageDescriptionDictionary, and NSFallDetectionUsageDescription from the Info.plist files when exporting for localization. (75813015)
+* Xcode는 이제 strings, 기타 localized assets의 번역을 보고 편집하기 위해 Xcode Localization Catalogs(.xcloc)를 열 수 있습니다. 이 기능의 일부로 `.xcloc`은 이제 Finder에서 package file-type입니다. localization catalog의 내용을 검사하려면 Finder에서 Show Package Contents를 사용하십시오. (30024017)
+* Swift String을 추출하는 새로운 Compiler 사용 설정은 `Text()`, `String(localized:)`, `AttributedString(localized:)` initializers 에서 string interpolations 및 string literals을 정확하게 추출하기 위해 Swift compiler를 호출 합니다. SwiftUI’s `LocalizedStringKey`, Foundation의 `StringLocalizationKey`입니다. 이 설정을 활성화하면 localization을 위해 내보내고 가져올 때 프로젝트의 모든 localized targets이 컴파일됩니다. 이 build setting은 모든 새 프로젝트에서 기본적으로 활성화되지만 기존 Swift projects에서는 선택할 수 있습니다. (58023398)
+* Objective-C 코드에서 새로운 `NSLocalizedAttributedString` macro를 사용하는 strings 추출을 위한 `genstrings`, localization import 및 export에 대한 지원이 추가되었습니다. (73067097)
+* multiple localizations의 Errors는 이제 localization exporting 시 single alert dialog에 집계됩니다. (73562452)
+* Xcode는 localization exporting 시 `Info.plist` 파일에서 `NSGKFriendListUsageDescription`, `NSLocationTemporaryUsageDescriptionDictionary` 및 `NSFallDetectionUsageDescription`을 자동으로 추출합니다. (75813015)
 
 ### Resolved Issues
 * Fixed an issue that may have unnecessarily required you to copy content from one localization into a newly added localization. When adding a new localization, you’re no longer required to copy content from a references language if the development language content doesn’t exist. (46222774) (FB5671738)
